fix menu on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
-html, body {
-    height: 100%;
+html {
+    position: relative;
+    min-height: 100%;
 }
 
 #gif-widget {
@@ -17,16 +18,17 @@ html, body {
 
 body {
     color: #555;
+    min-height: 100vh;
 }
 
 .little {
     color: #777;
 }
 
-body {
+.test {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+
 }
 
 .container {
@@ -188,6 +190,12 @@ h6, .h6 {
     text-align: center;
     background-color: #f9f9f9;
     border-top: 1px solid #e5e5e5;
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 135px;
 }
 
 .blog-footer p:last-child {
